--- a/Comments Analysis.ipynb
+++ b/Comments Analysis.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "id": "04010fed",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import nltk\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 72,
    "id": "02dfd148",
    "metadata": {},
    "outputs": [],
@@ -23,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 73,
    "id": "6e496de7",
    "metadata": {},
    "outputs": [
@@ -57,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 74,
    "id": "e58e3354",
    "metadata": {},
    "outputs": [],
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 75,
    "id": "479537dc",
    "metadata": {},
    "outputs": [
@@ -174,7 +176,7 @@
        "[708 rows x 2 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,8 +187,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "9ccdc9be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Text'] = df['Text'].str.lower()\n",
+    "df['Text'] = df['Text'].apply(lambda x: re.sub('[^a-zA-Z \\n]','',x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "2cb63522",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokens = df['Text'].apply(lambda x: nltk.word_tokenize(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "c043d494",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "stop_words = set(stopwords.words('english'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "d76bc4e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def removeStopWord (sentence,stop_words):\n",
+    "    newSentence = []\n",
+    "    for word in sentence:\n",
+    "        if word not in stop_words:\n",
+    "            newSentence.append(word)\n",
+    "    return newSentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "c0333f02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "removeStopWord = tokens.apply(lambda x: removeStopWord(x,stop_words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "7c6e1bdf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filteredDf = df.merge(removeStopWord,left_index=True,right_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "fcba5642",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filteredDf = filteredDf[['Text_y','Label']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "566e7181",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filteredDf.to_csv('Cleaned_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5c74596",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfcc5ab9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "999887db",
    "metadata": {},
    "outputs": [],
    "source": []
