--- a/Comments Analysis.ipynb
+++ b/Comments Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "id": "04010fed",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,16 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import nltk\n",
-    "import re"
+    "import re\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "id": "02dfd148",
    "metadata": {},
    "outputs": [],
@@ -25,26 +29,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "6e496de7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 769 entries, 0 to 768\n",
-      "Data columns (total 2 columns):\n",
-      " #   Column  Non-Null Count  Dtype \n",
-      "---  ------  --------------  ----- \n",
-      " 0   Text    769 non-null    object\n",
-      " 1   Label   769 non-null    int64 \n",
-      "dtypes: int64(1), object(1)\n",
-      "memory usage: 12.1+ KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.info()"
    ]
@@ -59,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "e58e3354",
    "metadata": {},
    "outputs": [],
@@ -69,8 +57,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "479537dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ccdc9be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Text'] = df['Text'].str.lower()\n",
+    "df['Text'] = df['Text'].apply(lambda x: re.sub('[^a-zA-Z \\n]','',x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cb63522",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokens = df['Text'].apply(lambda x: nltk.word_tokenize(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c043d494",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "stop_words = set(stopwords.words('english'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d76bc4e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def removeStopWord (sentence,stop_words):\n",
+    "    newSentence = []\n",
+    "    for word in sentence:\n",
+    "        if word not in stop_words:\n",
+    "            newSentence.append(word)\n",
+    "    return newSentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0333f02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "removeStopWord = tokens.apply(lambda x: removeStopWord(x,stop_words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c6e1bdf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filteredDf = df.merge(removeStopWord,left_index=True,right_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcba5642",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filteredDf = filteredDf[['Text_y','Label']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "566e7181",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filteredDf.to_csv('Cleaned_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5c74596",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "dfcc5ab9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def removeStopWord (sentence,stop_words):\n",
+    "    newSentence = []\n",
+    "    for word in sentence:\n",
+    "        if word not in stop_words:\n",
+    "            newSentence.append(word)\n",
+    "    return newSentence\n",
+    "\n",
+    "\n",
+    "def dataClean(s):\n",
+    "    '''\n",
+    "    s: Text Series\n",
+    "    return filtered tokenzied and removed stop word series\n",
+    "    '''\n",
+    "    s = s.str.lower()\n",
+    "    s = s.apply(lambda x: re.sub('[^a-zA-Z \\n]','',x))\n",
+    "    tokens = s.apply(lambda x: nltk.word_tokenize(x))\n",
+    "    stop_words = set(stopwords.words('english'))\n",
+    "    filteredS = tokens.apply(lambda x: removeStopWord(x,stop_words))\n",
+    "    return filteredS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "999887db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = dataClean(df['Text'])\n",
+    "s = s.astype('string')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "31415f80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorizer = CountVectorizer(max_features=1500)\n",
+    "X = vectorizer.fit_transform(s).toarray()\n",
+    "\n",
+    "tfidfconverter = TfidfTransformer()\n",
+    "X = tfidfconverter.fit_transform(X).toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "fb17b931",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.        , 0.        , ..., 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.70710678, 0.        , ..., 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.        , 1.        , ..., 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       ...,\n",
+       "       [0.        , 0.        , 0.        , ..., 0.67480635, 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.        , 0.        , ..., 0.        , 1.        ,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.        , 0.        , ..., 0.        , 0.        ,\n",
+       "        1.        ]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "2cb92c7e",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +336,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>708 rows × 2 columns</p>\n",
+       "<p>769 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -173,10 +353,10 @@
        "767                       Yumy yumy      1\n",
        "768                        Yumyyyyy      1\n",
        "\n",
-       "[708 rows x 2 columns]"
+       "[769 rows x 2 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,112 +367,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "9ccdc9be",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['Text'] = df['Text'].str.lower()\n",
-    "df['Text'] = df['Text'].apply(lambda x: re.sub('[^a-zA-Z \\n]','',x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "id": "2cb63522",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tokens = df['Text'].apply(lambda x: nltk.word_tokenize(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "id": "c043d494",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nltk.corpus import stopwords\n",
-    "from nltk.tokenize import word_tokenize\n",
-    "stop_words = set(stopwords.words('english'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "id": "d76bc4e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def removeStopWord (sentence,stop_words):\n",
-    "    newSentence = []\n",
-    "    for word in sentence:\n",
-    "        if word not in stop_words:\n",
-    "            newSentence.append(word)\n",
-    "    return newSentence"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "id": "c0333f02",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "removeStopWord = tokens.apply(lambda x: removeStopWord(x,stop_words))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "id": "7c6e1bdf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filteredDf = df.merge(removeStopWord,left_index=True,right_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "id": "fcba5642",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filteredDf = filteredDf[['Text_y','Label']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "id": "566e7181",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filteredDf.to_csv('Cleaned_data.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "b5c74596",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dfcc5ab9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "999887db",
+   "id": "c64fcf26",
    "metadata": {},
    "outputs": [],
    "source": []
